<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tituloMain"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/rojo"
            android:paddingBottom="150sp"/>

        <EditText
            android:id="@+id/txtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtNombre"
            android:textSize="18sp"
            android:textAlignment="center"
            android:textStyle="italic"
            android:inputType="textPersonName"/>

        <EditText
            android:id="@+id/txtBase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtBase"
            android:inputType="numberDecimal"
            android:maxLength="4"
            android:paddingTop="50sp"
            android:textSize="18sp"
            android:textStyle="italic"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/txtAltura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtAltura"
            android:inputType="numberDecimal"
            android:maxLength="4"
            android:paddingTop="50sp"
            android:textSize="18sp"
            android:textStyle="italic"
            android:textAlignment="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="30sp"
            android:gravity="center">

            <Button
                android:id="@+id/btnLimpiar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnLimpiar" />

            <Button
                android:id="@+id/btnSiguiente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnSiguiente" />

            <Button
                android:id="@+id/btnSalir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnSalir" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>