<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RectanguloActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView android:id="@+id/txtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Nombre"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAlignment="center"/>

        <TextView android:id="@+id/txtAltura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Altura"
            android:textStyle="italic|bold"
            android:textSize="18sp"
            android:paddingTop="30sp"/>

        <TextView android:id="@+id/txtBase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Base"
            android:textStyle="italic|bold"
            android:textSize="18sp"
            android:paddingTop="30sp"
            android:paddingBottom="40sp"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <RadioButton
                android:id="@+id/rdbArea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opcA" />

            <RadioButton
                android:id="@+id/rdbPerimetro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opcB" />
        </RadioGroup>

        <TextView
            android:id="@+id/txtResultado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resA"
            android:textSize="16sp"
            android:paddingBottom="50sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <Button
                android:id="@+id/btnCalcular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Calcular" />

            <Button
                android:id="@+id/btnRegresar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Regresar" />

        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>